--- a/Konzole.html
+++ b/Konzole.html
@@ -20,7 +20,7 @@
       <header>
         <a href="Index.html" class="logo">Gaming store</a>
         <ul class="navigacijska-traka">
-          <li><a href="#">Home</a></li>
+          <li><a href="Index.html">Home</a></li>
           <li><a href="GamingPC.html">Gaming PC</a></li>
           <li><a href="Laptopi.html">Laptopi</a></li>
           <li><a href="Monitori.html">Monitori</a></li>
