--- a/tastatura.html
+++ b/tastatura.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-tastatura.css">
   </head>
   <body>
 
@@ -45,16 +45,16 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-tastatura ">
 
-      <div class="product-box">
+      <div class="product-box-tastatura ">
         <img src="images/tastatura/key1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>SteelSeries Apex 3 TKL RGB Gaming Keyboard – Tenkeyless Compact Form
-          Factor - 8-Zone RGB Illumination – IP32 Water & Dust Resistant –
-          Whisper Quiet Gaming Switch – Gaming Grade Anti-Ghosting
+        <h2>SteelSeries Apex 3</h2>
+        <p> TKL RGB Gaming Keyboard – Tenkeyless Compact Form <br>
+          Factor - 8-Zone RGB Illumination – <br> IP32 Water & Dust Resistant –
+          Whisper Quiet Gaming Switch – <br> Gaming Grade Anti-Ghosting
         </p>
-        <p>44</p>
+        <p>88 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -62,14 +62,15 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-tastatura ">
         <img src="images/tastatura/key2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Razer Huntsman V2 TKL Tenkeyless Gaming Keyboard: Fastest Clicky
-          Optical Switches w/Quick Keystrokes & 8000Hz Polling Rate - Detachable
-          Type-C Cable - Doubleshot PBT Keycaps - Ergonomic Wrist Rest
+        <h2>Razer Huntsman V2 TKL</h2>
+        <p> Tenkeyless Gaming Keyboard: Fastest Clicky <br>
+          Optical Switches w/Quick Keystrokes & 8000Hz Polling Rate - <br>
+          Detachable
+          Type-C Cable - <br> Doubleshot PBT Keycaps - Ergonomic Wrist Rest
         </p>
-        <p>125</p>
+        <p>250 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -77,12 +78,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-tastatura ">
         <img src="images/tastatura/key3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>EVGA Z15 RGB Gaming Keyboard, RGB Backlit LED, Hotswappable
-          Mechanical Kailh Speed Silver Switches (Linear), 821-W1-15US-KR</p>
-        <p>99</p>
+        <h2>EVGA Z15 RGB Gaming Keyboard,</h2>
+        <p> RGB Backlit LED, Hotswappable <br>
+          Mechanical Kailh Speed Silver Switches <br> (Linear), 821-W1-15US-KR</p>
+        <p>200 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -90,12 +91,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-tastatura ">
         <img src="images/tastatura/key4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>RK ROYAL KLUDGE RK61 Wired 60% Mechanical Gaming Keyboard RGB Backlit
-          Ultra-Compact Hot-Swappable Red Switch White</p>
-        <p>56</p>
+        <h2>RK ROYAL KLUDGE RK61</h2>
+        <p> Wired 60% Mechanical Gaming Keyboard RGB Backlit <br>
+          Ultra-Compact Hot- <br> Swappable Red Switch White</p>
+        <p>110 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -103,13 +104,14 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-tastatura ">
         <img src="images/tastatura/key5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>HK Gaming GK61 Mechanical Gaming Keyboard 60 Percent | 61 RGB Rainbow
-          LED Backlit Programmable Keys | USB Wired | for Mac and Windows PC |
+        <h2>HK Gaming GK61</h2>
+        <p> Mechanical Gaming Keyboard 60 Percent | <br> 61 RGB Rainbow
+          LED Backlit Programmable Keys | <br> USB Wired | for Mac and Windows
+          PC |
           Hotswap Gateron Optical Blue Switches | Red</p>
-        <p>79</p>
+        <p>160 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -117,13 +119,14 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-tastatura ">
         <img src="images/tastatura/key6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Redragon K585 DITI One-Handed RGB Mechanical Gaming Keyboard, Type-C
+        <h2>Redragon K585 DITI</h2>
+        <p> One-Handed RGB Mechanical Gaming Keyboard, Type-C <br>
           Professional Gaming Keypad with 7 Onboard Macro Keys, Detachable Wrist
+          <br>
           Rest, 42 Keys (Black-Blue Switch)</p>
-        <p>44</p>
+        <p>90 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
