--- a/miš.html
+++ b/miš.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-mis.css">
   </head>
   <body>
 
@@ -45,16 +45,17 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-mis">
 
-      <div class="product-box">
+      <div class="product-box-mis">
         <img src="images/mis/mis1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Razer Basilisk V3 Pro Customizable Wireless Gaming Mouse: Fast
-          Optical Switches Gen-3 - HyperScroll Tilt Wheel - Chroma RGB - 11
-          Programmable Buttons - Focus Pro 30K Optical Sensor - Classic Black
+        <h2>Razer Basilisk V3 Pro</h2>
+        <p> Customizable Wireless Gaming Mouse: Fast <br>
+          Optical Switches Gen-3 - HyperScroll Tilt Wheel - <br>Chroma RGB - 11
+          Programmable Buttons - <br> Focus Pro 30K Optical Sensor - Classic
+          Black
         </p>
-        <p>159</p>
+        <p>300 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -62,13 +63,13 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mis">
         <img src="images/mis/mis2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Razer DeathAdder v2 Mini Gaming Mouse: 8500K DPI Optical Sensor - 62g
-          Lightweight Design - Chroma RGB Lighting - 6 Programmable Buttons -
-          Anti-Slip Grip Tape Included - Classic Black</p>
-        <p>50</p>
+        <h2>Razer DeathAdder v2 Mini Gaming </h2>
+        <p> 8500K DPI Optical Sensor - 62g <br>
+          Lightweight Design - Chroma RGB Lighting <br> 6 Programmable Buttons-
+          Anti-Slip Grip Tape Included <br> Classic Black</p>
+        <p>100 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -76,13 +77,14 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mis">
         <img src="images/mis/mis3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Redragon M908 Impact RGB LED MMO Mouse with Side Buttons Optical
-          Wired Gaming Mouse with 12,400DPI, High Precision, 20 Programmable
+        <h2>Redragon M908 Impact RGB LED</h2>
+        <p> MMO Mouse with Side Buttons Optical <br>
+          Wired Gaming Mouse with 12,400DPI, <br> High Precision, <br> 20
+          Programmable
           Mouse Buttons</p>
-        <p>32</p>
+        <p>64 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -90,12 +92,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mis">
         <img src="images/mis/mis4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Glorious Gaming Mouse - Model O 67 g Superlight Honeycomb Mouse,
-          Matte Black Mouse - USB Gaming Mouse</p>
-        <p>44</p>
+        <h2>Glorious Gaming Mouse </h2>
+        <p>Model O 67 g Superlight <br> Honeycomb Mouse, <br>
+          Matte Black Mouse <br> USB Gaming Mouse</p>
+        <p>88 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -103,12 +105,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mis">
         <img src="images/mis/mis5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Corsair Scimitar RGB Elite, MOBA/MMO Gaming Mouse, Black, Backlit RGB
-          LED, 18000 DPI, Optical</p>
-        <p>50</p>
+        <h2>Corsair Scimitar RGB Elite</h2>
+        <p> MOBA/MMO Gaming Mouse, <br> Black, <br> Backlit RGB
+          LED, <br> 18000 DPI, Optical</p>
+        <p>100 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -116,12 +118,13 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mis">
         <img src="images/mis/mi6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Logitech G502 Lightspeed Wireless Gaming Mouse with Hero 25K Sensor,
-          PowerPlay Compatible, Tunable Weights and Lightsync RGB - Black</p>
-        <p>117</p>
+        <h2>Logitech G502</h2>
+        <p> Lightspeed Wireless Gaming Mouse <br>with Hero 25K Sensor,
+          PowerPlay Compatible, <br> Tunable Weights and Lightsync RGB - <br>
+          Black</p>
+        <p>240 KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
