--- a/Kontakt.html
+++ b/Kontakt.html
@@ -7,22 +7,26 @@
     <title>Kontakt</title>
     <link rel="stylesheet" href="styles/style-menu.css">
     <link rel="stylesheet" href="styles/style-kontakt.css">
+
   </head>
   <body>
+
+
     <div class="kontakt-container">
       <form class="kontakt-forma">
         <h3>KONTAKTIRAJTE NAS</h3>
         <input type="text" id="name" placeholder="Ime">
-        <input type="text" id="name" placeholder="Prezime">
+        <input type="text" id="lastName" placeholder="Prezime">
         <input type="email" id="email" placeholder="Email">
         <input type="text" id="phone" placeholder="Broj telefona">
         <textarea id="message" rows="4" placeholder="Kako vam mozemo pomoći"></textarea>
-        <button type="Submit">Pošalji</button>
+        <button type="" onclick="testContact()">Pošalji</button>
       </form>
     </div>
 
 
 
+    <script src="scripts/buy.js"></script>
 
   </body>
 </html>
