--- a/acer-monitor.html
+++ b/acer-monitor.html
@@ -17,6 +17,7 @@
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style-product-monitor.css">
+    <script src="scripts/buy.js"></script>
   </head>
   <body>
 
@@ -32,7 +33,7 @@
           <li><a href="Komponente.html">Komponente</a></li>
           <li><a href="Periferije.html">Periferije</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
-          <li><a href="Kontakt.html">Kontakt</a></li>
+
         </ul>
         <div class="action">
           <div class="searchBox">
@@ -58,7 +59,7 @@
         <p>320KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -75,7 +76,7 @@
         <p>400KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -93,7 +94,7 @@
         <p>500KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
 
@@ -111,7 +112,7 @@
         <p>800KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -126,7 +127,7 @@
         <p>1998KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -142,7 +143,7 @@
         <p>1400KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
