--- a/dell-laptop.html
+++ b/dell-laptop.html
@@ -17,6 +17,7 @@
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style-product-laptop.css">
+    <script src="scripts/buy.js"></script>
   </head>
   <body>
 
@@ -31,7 +32,7 @@
           <li><a href="Komponente.html">Komponente</a></li>
           <li><a href="Periferije.html">Periferije</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
-          <li><a href="Kontakt.html">Kontakt</a></li>
+
         </ul>
         <div class="action">
           <div class="searchBox">
@@ -59,7 +60,7 @@
         <p>1920 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -75,7 +76,7 @@
         <p>2900 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -90,7 +91,7 @@
         <p>4200 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -106,7 +107,7 @@
         <p> 3400 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -121,7 +122,7 @@
         <p>1960 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -136,7 +137,7 @@
         <p>1600 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
