--- a/mrezna oprema.html
+++ b/mrezna oprema.html
@@ -17,6 +17,7 @@
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style-product.css">
+    <script src="scripts/buy.js"></script>
   </head>
   <body>
 
@@ -31,7 +32,7 @@
           <li><a href="Komponente.html">Komponente</a></li>
           <li><a href="Periferije.html">Periferije</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
-          <li><a href="Kontakt.html">Kontakt</a></li>
+
         </ul>
         <div class="action">
           <div class="searchBox">
@@ -57,7 +58,7 @@
         <p>100</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -71,7 +72,7 @@
         <p>35</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -85,7 +86,7 @@
         <p>80</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -99,7 +100,7 @@
         <p>40</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -113,7 +114,7 @@
         <p>20</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -127,7 +128,7 @@
         <p>22</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -141,7 +142,7 @@
         <p>40</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -155,7 +156,7 @@
         <p>40</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -169,7 +170,7 @@
         <p>60</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -182,7 +183,7 @@
         <p>12</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -195,7 +196,7 @@
         <p>20</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -210,7 +211,7 @@
         <p>1500$</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -224,7 +225,7 @@
         <p>50</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -239,7 +240,8 @@
         <p>60/p>
 
           <div class="opcije">
-            <a href="#">Buy it now</a>
+            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+              now</a>
           </div>
 
         </div>
@@ -253,7 +255,8 @@
           <p>70</p>
 
           <div class="opcije">
-            <a href="#">Buy it now</a>
+            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+              now</a>
           </div>
 
         </div>
@@ -267,7 +270,8 @@
           <p>15</p>
 
           <div class="opcije">
-            <a href="#">Buy it now</a>
+            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+              now</a>
           </div>
 
         </div>
@@ -281,7 +285,8 @@
           <p>9</p>
 
           <div class="opcije">
-            <a href="#">Buy it now</a>
+            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+              now</a>
           </div>
 
         </div>
@@ -295,7 +300,8 @@
           <p>12</p>
 
           <div class="opcije">
-            <a href="#">Buy it now</a>
+            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+              now</a>
           </div>
 
         </div>
