--- a/msi-monitor.html
+++ b/msi-monitor.html
@@ -58,7 +58,7 @@
         <p>730 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -72,7 +72,7 @@
         <p>330 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI G241VC')">Buy it now</a>
         </div>
 
       </div>
@@ -86,7 +86,7 @@
         <p>320 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI G241V E2')">Buy it now</a>
         </div>
 
       </div>
@@ -100,7 +100,7 @@
         <p>460 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI')">Buy it now</a>
         </div>
 
       </div>
@@ -115,7 +115,7 @@
         <p>620 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MAG301CR2')">Buy it now</a>
         </div>
 
       </div>
@@ -129,7 +129,7 @@
         <p>1120 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI')">Buy it now</a>
         </div>
 
       </div>
@@ -177,5 +177,7 @@
       </div>
     </footer>
 
+
+    <script src="scripts/buy.js"></script>
   </body>
 </html>
