--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="scripts/buy.js"></script>
 
 
   </head>
@@ -35,7 +36,7 @@
           <li><a href="Komponente.html">Komponente</a></li>
           <li><a href="Periferije.html">Periferije</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
-          <li><a href="Kontakt.html">Kontakt</a></li>
+
         </ul>
         <div class="action">
           <div class="searchBox">
