--- a/asus-laptop.html
+++ b/asus-laptop.html
@@ -17,6 +17,7 @@
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style-product-laptop.css">
+    <script src="scripts/buy.js"></script>
   </head>
   <body>
 
@@ -31,7 +32,7 @@
           <li><a href="Komponente.html">Komponente</a></li>
           <li><a href="Periferije.html">Periferije</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
-          <li><a href="Kontakt.html">Kontakt</a></li>
+
         </ul>
         <div class="action">
           <div class="searchBox">
@@ -57,7 +58,7 @@
         <p>2560 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -72,7 +73,7 @@
         <p>3800 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -87,7 +88,7 @@
         <p>4600 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -102,7 +103,7 @@
         <p>3850 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -117,7 +118,7 @@
         <p>1800 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -132,7 +133,7 @@
         <p>2300 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
