--- a/hdd.html
+++ b/hdd.html
@@ -17,6 +17,7 @@
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style-product.css">
+    <script src="scripts/buy.js"></script>
   </head>
   <body>
 
@@ -31,7 +32,7 @@
           <li><a href="Komponente.html">Komponente</a></li>
           <li><a href="Periferije.html">Periferije</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
-          <li><a href="Kontakt.html">Kontakt</a></li>
+
         </ul>
         <div class="action">
           <div class="searchBox">
@@ -56,7 +57,7 @@
         <p>88 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -71,7 +72,7 @@
         <p>220 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -86,7 +87,8 @@
           <p>150 KM</p>
 
           <div class="opcije">
-            <a href="#">Buy it now</a>
+            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+              now</a>
           </div>
 
         </div>
@@ -105,7 +107,8 @@
           <p>600 KM</p>
 
           <div class="opcije">
-            <a href="#">Buy it now</a>
+            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+              now</a>
           </div>
 
         </div>
@@ -120,7 +123,8 @@
           <p>97 KM</p>
 
           <div class="opcije">
-            <a href="#">Buy it now</a>
+            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+              now</a>
           </div>
 
         </div>
@@ -133,7 +137,8 @@
           <p>150 KM</p>
 
           <div class="opcije">
-            <a href="#">Buy it now</a>
+            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+              now</a>
           </div>
 
         </div>
