--- a/nitendo.html
+++ b/nitendo.html
@@ -17,6 +17,7 @@
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style-product.css">
+    <script src="scripts/buy.js"></script>
   </head>
   <body>
 
@@ -31,7 +32,7 @@
           <li><a href="Komponente.html">Komponente</a></li>
           <li><a href="Periferije.html">Periferije</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
-          <li><a href="Kontakt.html">Kontakt</a></li>
+
         </ul>
         <div class="action">
           <div class="searchBox">
@@ -61,7 +62,7 @@
         <p>1500$</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -79,7 +80,7 @@
         <p>1500$</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -97,7 +98,7 @@
         <p>1500$</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -115,7 +116,7 @@
         <p>1500$</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -133,7 +134,7 @@
         <p>1500$</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -151,7 +152,7 @@
         <p>1500$</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
