--- a/ryzen-pc.html
+++ b/ryzen-pc.html
@@ -17,6 +17,7 @@
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style-product.css">
+    <script src="scripts/buy.js"></script>
   </head>
   <body>
 
@@ -31,7 +32,7 @@
           <li><a href="Komponente.html">Komponente</a></li>
           <li><a href="Periferije.html">Periferije</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
-          <li><a href="Kontakt.html">Kontakt</a></li>
+
         </ul>
         <div class="action">
           <div class="searchBox">
@@ -58,7 +59,9 @@
         <p>3000 KM</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('Skytech Shadow Gaming Pc')">
+            Buy it
+            now</a>
         </div>
 
       </div>
@@ -74,7 +77,8 @@
           <p>5000 KM</p>
 
           <div class="opcije">
-            <a href="#">Buy it now</a>
+            <a href="#" onclick="buyProduct('Skytech Prism II Gaming PC')">Buy
+              it now</a>
           </div>
 
         </div>
@@ -88,7 +92,7 @@
             <p>2400 KM</p>
 
             <div class="opcije">
-              <a href="#">Buy it now</a>
+              <a href="#" onclick="buyProduct('ADMI | Gaming PC')">Buy it now</a>
             </div>
 
           </div>
@@ -102,7 +106,8 @@
             <p>3600 KM</p>
 
             <div class="opcije">
-              <a href="#">Buy it now</a>
+              <a href="#" onclick="buyProduct('Skytech Chronos Gaming PC ')">Buy
+                it now</a>
             </div>
 
           </div>
@@ -117,7 +122,8 @@
             <p>3580 KM</p>
 
             <div class="opcije">
-              <a href="#">Buy it now</a>
+              <a href="#" onclick="buyProduct('SkytechBlaze 3.0 Gaming')">Buy it
+                now</a>
             </div>
 
           </div>
@@ -132,10 +138,12 @@
             <p>2700 KM</p>
 
             <div class="opcije">
-              <a href="#">Buy it now</a>
+              <a href="#" onclick="buyProduct('Skytech Shadow 3.0 Gaming')">Buy
+                it now</a>
             </div>
 
           </div>
+
 
 
 
