--- a/slusalice.html
+++ b/slusalice.html
@@ -17,6 +17,7 @@
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style-product.css">
+    <script src="scripts/buy.js"></script>
   </head>
   <body>
 
@@ -31,7 +32,7 @@
           <li><a href="Komponente.html">Komponente</a></li>
           <li><a href="Periferije.html">Periferije</a></li>
           <li><a href="Konzole.html">Konzole</a></li>
-          <li><a href="Kontakt.html">Kontakt</a></li>
+
         </ul>
         <div class="action">
           <div class="searchBox">
@@ -59,7 +60,7 @@
         <p>130 </p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -73,7 +74,7 @@
         <p>100</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -86,7 +87,7 @@
         <p>100</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -100,7 +101,7 @@
         <p>60</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -115,7 +116,7 @@
         <p>70</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
@@ -129,7 +130,7 @@
         <p>50</p>
 
         <div class="opcije">
-          <a href="#">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
         </div>
 
       </div>
